--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tanstack/react-query": "^5.87.4",
     "babel-preset-expo": "^54.0.6",
     "expo": "~54.0.0",
+    "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.0",
+    "expo-crypto": "~15.0.7",
     "expo-linking": "~8.0.0",
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.0",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.468.0",
     "react": "19.1.0",
     "react-hook-form": "^7.62.0",
